# signet

./: .gitignore  Cargo.toml  Dockerfile  README.md  buf.gen.yaml
istio/: signet-ext-proc-filter.yaml
k8s/: signet-deployment.yaml  signet-svc.yaml
src/: hello_world.rs  server.rs
