[package]
name = "signet"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "signet"
path = "src/server.rs"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
http = "1.4.0"
http-body-util = "0.1.3"
httpsig-hyper = "0.0.20"