[package]
name = "signet"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "signet"
path = "src/server.rs"

[dependencies]
tonic = "0.14.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
http = "1.4.0"
http-body-util = "0.1.3"
httpsig-hyper = "0.0.20"
envoy-types = "0.7.2"
tokio-stream = "0.1.18"
bytes = "1.11.0"
sha2 = "0.10.9"
base64 = "0.22.1"
httpdate = "1.0.3"